/*
 * xsync: build.gradle
 * XNAT http://www.xnat.org
 * Copyright (c) 2017, Washington University School of Medicine
 * All Rights Reserved
 *
 * Released under the Simplified BSD.
 */

buildscript {
    ext {
        vXnat = '1.10.1-SNAPSHOT'
    }
    repositories {
        mavenLocal()
        maven { url "https://plugins.gradle.org/m2" }
        mavenCentral()
        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    }
    dependencies {
        classpath "com.palantir.gradle.gitversion:gradle-git-version:3.0.0"
        classpath "gradle.plugin.com.dorongold.plugins:task-tree:1.5"
        classpath "io.franzbecker:gradle-lombok:5.0.0"
        classpath "io.spring.gradle:dependency-management-plugin:1.1.7"
        classpath "org.nrg.xnat.build:xnat-data-builder:${vXnat}"
    }
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: "org.nrg.xnat.build.xnat-data-builder"
apply plugin: 'io.franzbecker.gradle-lombok'

group 'org.nrg.xsync'
version "1.8.2-SNAPSHOT"
description "XNAT XSync Plugin"


repositories {
    mavenLocal()
    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    mavenCentral()
}

// Use this configuration to put dependencies into the fat jar
configurations {
    implementation.extendsFrom(implementAndInclude)
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencyManagement.imports {
    mavenBom "org.nrg:parent:${vXnat}"
}

lombok {
    version = "1.18.34"
    sha256 = "1ea5ad6c6afcff902d75072b2aaa6695585aebee9f12127e15c0036ba95d2918"
}

dependencies {
    implementation("org.nrg.xnat:web") {
        transitive = false
    }

    implementation("org.nrg.xdat:core") {
        transitive = false
    }
    annotationProcessor("org.nrg:framework")
    compileOnly("org.nrg:framework")
    implementation("org.nrg:config") {
        transitive = false
    }
    implementation("org.nrg:transaction") {
        transitive = false
    }
    implementation("org.nrg:mail") {
        transitive = false
    }
    implementation("org.nrg:prefs") { transitive = false }
    implementation("org.nrg.dicom:mizer") { transitive = false }
    implementation("org.nrg:dicomtools") { transitive = false }

    implementation("javax.servlet:javax.servlet-api") { transitive = false }

    implementation("turbine:turbine") {
        transitive = false
    }
    implementation("org.apache.velocity:velocity") {
        transitive = false
    }

    implementation("org.restlet:org.restlet") { transitive = false }
    implementation("dcm4che:dcm4che-core") { transitive = false }
    implementation("javax.mail:javax.mail-api") { transitive = false }
    implementation("com.google.code.gson:gson") { transitive = false }

    implementation("eu.bitwalker:UserAgentUtils") { transitive = false }

    implementAndInclude('com.opencsv:opencsv:5.9')

    implementation "commons-beanutils:commons-beanutils"
    implementation "commons-codec:commons-codec"
    implementation "commons-collections:commons-collections"
    implementation "commons-configuration:commons-configuration"
    implementation "commons-digester:commons-digester"
    implementation "commons-discovery:commons-discovery"
    implementation "commons-fileupload:commons-fileupload"
    implementation "commons-net:commons-net"

    implementation "org.apache.commons:commons-configuration2"
    implementation "org.apache.commons:commons-math"
    implementation "org.apache.commons:commons-text"

    implementation "org.apache.httpcomponents:httpclient"
    implementation 'org.apache.httpcomponents:httpmime'


    implementation "org.hibernate:hibernate-core"

    implementation "org.springframework:spring-webmvc"

    implementation "com.fasterxml.jackson.core:jackson-annotations"
    implementation "com.fasterxml.jackson.core:jackson-core"
    implementation "com.fasterxml.jackson.core:jackson-databind"

    implementation "io.springfox:springfox-swagger2"
    implementation "io.springfox:springfox-swagger-ui"

    implementation "org.slf4j:slf4j-api"
    implementation "org.slf4j:log4j-over-slf4j"

    implementation "ecs:ecs"

    implementation "com.google.code.findbugs:jsr305"
    implementation "org.kohsuke.metainf-services:metainf-services"

    // JDK 11+ removed javax.annotation (JSR-250) — plugin uses PostConstruct/Nonnull/Nullable
    compileOnly "javax.annotation:javax.annotation-api:1.3.2"
}

configurations {
    all*.exclude group: 'com.sun.media', module: 'jai_imageio'
    all*.exclude group: 'javax.sql', module: 'jdbc-stdext'
    all*.exclude group: 'javax.transaction', module: 'jta'
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            srcDir 'build/xnat-generated/src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
            srcDir 'build/xnat-generated/src/main/resources'
        }
    }
}

task fatJar(type: Jar) {
    zip64 true
    archiveBaseName = project.name + '-all'
    setDuplicatesStrategy(org.gradle.api.file.DuplicatesStrategy.EXCLUDE)
    from {
        configurations.implementAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    with jar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact fatJar
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }
    repositories {
        maven {
            name = "XNAT_Artifactory"
            url = project.version.toString().endsWith("-SNAPSHOT")
                ? "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot-local"
                : "https://nrgxnat.jfrog.io/nrgxnat/libs-release-local"
            // CI injects ORG_GRADLE_PROJECT_artifactoryUser/Token env vars (Gradle maps
            // these to project properties). Local devs can set artifactoryUser/Token in
            // ~/.gradle/gradle.properties. Mirrors monorepo's buildSrc convention.
            credentials {
                username = (project.findProperty("artifactoryUser")  ?: System.getenv("ARTIFACTORY_USER"))  ?: ""
                password = (project.findProperty("artifactoryToken") ?: System.getenv("ARTIFACTORY_TOKEN")) ?: ""
            }
        }
    }
}
